--- a/myapp/docker-compose.yml
+++ b/myapp/docker-compose.yml
@@ -18,7 +18,7 @@ services:
       - "8080:80"
     depends_on:
       - redis-db
-      - calculator
+      - webServer
       - user-service
   redis-db:
     image: "redis:alpine"
