--- a/myapp/docker-compose.yml
+++ b/myapp/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3.0"
 services:
-  webSerber:
+  calculator:
     build: .
     ports:
-     - "3000:3000"
+     - "3001:3000"
   frontend:
     image: "webdevtoolsandtech/currency-frontend"
   backend:
@@ -18,7 +18,7 @@ services:
       - "8080:80"
     depends_on:
       - redis-db
-      - webServer
+      - calculator
       - user-service
   redis-db:
     image: "redis:alpine"
